log
Wed, Mar 26, 2025 10:23:25 PM: 
 list.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  1|5
total_score: 10/70
25021aa
Wed, Mar 26, 2025 10:28:10 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
f731f90
Wed, Mar 26, 2025 10:32:34 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 35/70
15a1891
Wed, Mar 26, 2025 10:37:58 PM: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  7|3
total_score: 35/70
02a9d6f
Wed, Mar 26, 2025 10:39:06 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 35/70
d7d95df
Wed, Mar 26, 2025 10:41:28 PM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
d0e6792
Wed, Mar 26, 2025 10:54:56 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
7f84561
Wed, Mar 26, 2025 10:56:24 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
1013971
Wed, Mar 26, 2025 11:03:45 PM: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
list.c: In function 'pushCurrent':
list.c:107:23: error: expected expression before 'List'
     newNode -> prev = List -> current;
                       ^~~~
Compilation failed
8bf7e00
Wed, Mar 26, 2025 11:07:34 PM: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
06cb295
Wed, Mar 26, 2025 11:13:26 PM: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:143:11: error: unused variable 'auxDelete' [-Werror=unused-variable]
     Node* auxDelete = list -> current;
           ^~~~~~~~~
list.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
39d9140
Wed, Mar 26, 2025 11:16:21 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:144:11: error: unused variable 'data' [-Werror=unused-variable]
     void* data = auxDelete -> data;
           ^~~~
list.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b1a5d41
Wed, Mar 26, 2025 11:18:16 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:144:11: error: unused variable 'data' [-Werror=unused-variable]
     void* data = auxDelete -> data;
           ^~~~
list.c:151:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6606e05
Wed, Mar 26, 2025 11:28:18 PM: 
 list.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
6830527
Wed, Mar 26, 2025 11:30:59 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:163:34: error: 'prev' undeclared (first use in this function); did you mean 'free'?
     list -> current = auxDelete -prev;
                                  ^~~~
                                  free
list.c:163:34: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b5ce763
